--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "aws-amplify": "^6.3.8",
     "leaflet": "^1.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
