--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/material": "^5.15.21",
     "aws-amplify": "^6.3.8",
     "leaflet": "^1.9.4",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
