--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "aws-amplify": "^6.3.8",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.8",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
